:zap: allo subgraph + new deploy

--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactory
-    network: localhost
+    network: arbitrum-sepolia
     context:
-      chainId: 
+      chainId:
         type: Int
-        data: 1337
+        data: 421614
     source:
-      address: "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707"
+      address: "0xA7A94292413644DE53792597E28eDEF71D02bb7a"
       abi: RegistryFactory
-      startBlock: 0
+      startBlock: 11371411
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -35,7 +35,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunity
-    network: localhost
+    network: arbitrum-sepolia
     source:
       abi: RegistryCommunity
     mapping:
@@ -48,6 +48,7 @@ templates:
         - CVStrategy
         - TokenGarden
         - Member
+        - Allo
       abis:
         - name: RegistryCommunity
           file: ../contracts/out/RegistryCommunity.sol/RegistryCommunity.json
@@ -55,7 +56,7 @@ templates:
           file: ../contracts/out/ERC20.sol/ERC20.json
         - name: CVStrategy
           file: ../contracts/out/CVStrategy.sol/CVStrategy.json
-     
+
       eventHandlers:
         - event: RegistryInitialized(bytes32,string,(uint256,string))
           handler: handleInitialized
@@ -89,7 +90,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategy
-    network: localhost
+    network: arbitrum-sepolia
     source:
       abi: CVStrategy
     mapping:
@@ -111,4 +112,3 @@ templates:
         - event: ProposalCreated(uint256,uint256)
           handler: handleProposalCreated
       file: ./src/mappings/cv-strategy.ts
-  
