:sparkles: huge commits break changes :zap: clean up env :zap: using more subgraph data / removing mock data :zap: improv ActivePoints button :zap: proposalType and poolAmount :zap: LeaveCommunity button name ---contracts --- :zap: `PoolAmountIncreased` created

--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -1,28 +1,8 @@
-NEXT_PUBLIC_POOL_ID_ARB_SEPOLIA=
-NEXT_PUBLIC_POOL_ID_SIGNALING_ARB_SEPOLIA=
-NEXT_PUBLIC_STRATEGY1_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_STRATEGY2_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_ALLO_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_TOKEN_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_TOKEN_NATIVE_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_GARDENS_REGISTRY_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_ALLO_REGISTRY_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_POOL_ADMIN_ADDRESS_ARB_SEPOLIA=
-NEXT_PUBLIC_COUNCIL_SAFE_ADDRESS_ARB_SEPOLIA=
-RPC_URL_ARB_TESTNET=
-  
-NEXT_PUBLIC_POOL_ID_LOCAL=1
-NEXT_PUBLIC_POOL_ID_SIGNALING_LOCAL=2
-NEXT_PUBLIC_STRATEGY1_ADDRESS_LOCAL=0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0
-NEXT_PUBLIC_STRATEGY2_ADDRESS_LOCAL=0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82
-NEXT_PUBLIC_ALLO_ADDRESS_LOCAL=0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
-NEXT_PUBLIC_TOKEN_ADDRESS_LOCAL=0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
-NEXT_PUBLIC_TOKEN_NATIVE_ADDRESS_LOCAL=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
-NEXT_PUBLIC_GARDENS_REGISTRY_ADDRESS_LOCAL=0x61c36a8d610163660E21a8b7359e1Cac0C9133e1
-NEXT_PUBLIC_ALLO_REGISTRY_ADDRESS_LOCAL=0x5FbDB2315678afecb367f032d93F642f64180aa3
-NEXT_PUBLIC_POOL_ADMIN_ADDRESS_LOCAL=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
-NEXT_PUBLIC_COUNCIL_SAFE_ADDRESS_LOCAL=0xc05301902A91DcA455Bff2B9beBeE28A4830E3EC
-RPC_URL_LOCAL=https://go.getblock.io/16001c2f5d52431790ac1e2e5c12a78b
+NEXT_PUBLIC_SUBGRAPH_URL=
 
-ENV_GARDENS=local
-# ENV_GARDENS=prod
+# NEXT_PUBLIC_ENV_GARDENS=
+# NEXT_PUBLIC_ENV_GARDENS=prod
+
+NEXT_PUBLIC_RPC_URL_ARB_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
+
+RPC_URL_LOCAL=http://127.0.0.1:8545
