--- a/pkg/subgraph/.graphclientrc.yml
+++ b/pkg/subgraph/.graphclientrc.yml
@@ -2,9 +2,6 @@ sources:
   - name: gv2
     handler:
       graphql:
-        endpoint: ${SUBGRAPH_URL}
-# plugins:
-#   - pollingLive:
-#       defaultInterval: 1000
+        endpoint: http://localhost:8000/subgraphs/name/kamikazebr/gv2
 documents:
   - ./src/query/factory.graphql
