--- a/pkg/subgraph/.graphclientrc.yml
+++ b/pkg/subgraph/.graphclientrc.yml
@@ -2,6 +2,6 @@ sources:
   - name: gv2
     handler:
       graphql:
-        endpoint: http://localhost:8000/subgraphs/name/kamikazebr/gv2
+        endpoint: ${SUBGRAPH_URL:http://localhost:8000/subgraphs/name/kamikazebr/gv2}
 documents:
   - ./src/query/factory.graphql
