feat: ipfs api upload

--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_SUBGRAPH_URL=
 NEXT_PUBLIC_RPC_URL_ARB_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
 
 RPC_URL_LOCAL=http://127.0.0.1:8545
+
+PINATA_JWT=
