--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@graphprotocol/client-urql": "^2.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^5.17.19",
     "@urql/next": "^1.1.0",
