--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@urql/next": "^1.1.0",
     "@wagmi/core": "~1",
+    "addreth": "^2.0.0",
     "classnames": "^2.5.1",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
