--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@wagmi/core": "~1",
     "addreth": "^2.0.0",
     "classnames": "^2.5.1",
+    "dnum": "^2.11.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "graphql": "^16.8.1",
