Fix: Subgraph fixes regarding the protocol fee and community fee, adding missing attributes to queries.

--- a/pkg/subgraph/src/templates/registryFactory.yaml
+++ b/pkg/subgraph/src/templates/registryFactory.yaml
@@ -24,4 +24,6 @@
       eventHandlers:
         - event: CommunityCreated(address)
           handler: handleCommunityCreated
+        - event: ProtocolFeeSet(address,uint256)
+          handler: handleProtocolFeeSet
       file: ./src/mappings/registry-factory.ts
