--- a/foundry.toml
+++ b/foundry.toml
@@ -122,8 +122,8 @@ optimizer-runs = 1_000
 # # following example enables read-write access for the project dir :
 # #       `fs_permissions = [{ access = "read-write", path = "./"}]`
 # fs_permissions = [{ access = "read", path = "./out"}]
-# [fuzz]
-# runs = 256
+[fuzz]
+runs = 256
 # max_test_rejects = 65536
 # seed = '0x3e8'
 
