--- a/pkg/subgraph/src/templates/_cvStrategy.yaml
+++ b/pkg/subgraph/src/templates/_cvStrategy.yaml
@@ -17,4 +17,6 @@
           handler: handleInitialized
         - event: ProposalCreated(uint256,uint256)
           handler: handleProposalCreated
+        - event: SupportAdded(address,uint256,uint256,uint256)
+          handler: handleSupportAdded
       file: ./src/mappings/cv-strategy.ts
