--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -122,6 +122,8 @@ templates:
           handler: handlePoolAmountIncreased
         - event: SupportAdded(address,uint256,uint256,uint256,uint256)
           handler: handleSupportAdded
-
+        - event: Distributed(uint256,address,uint256)
+          handler: handleDistributed
+ 
       file: ./src/mappings/cv-strategy.ts
   
