--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -12,10 +12,12 @@
     "remove-local": "graph remove --node http://localhost:8020/ kamikazebr/gv2",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
     "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
+    "build-deploy:arbsep": "pnpm build:arbsep && pnpm manifest:arbsep && pnpm deploy:arbsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy-local",
     "last-addr": "ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-addr.ts",
     "build-client": "graphclient build --fileType js",
     "build-all": "pnpm create-local && pnpm build && pnpm deploy-local",
+    "deploy:arbsep:last": "dotenvx run -- ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-version.ts gv2-arbsepolia",
     "codegen": "graph codegen"
   },
   "dependencies": {
