--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -12,9 +12,9 @@ dataSources:
         type: Int
         data: 1337
     source:
-      address: "0x408a4e7a6efC7E331FE7D3Bb02708D49fE12eB8F"
+      address: "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707"
       abi: RegistryFactory
-      startBlock: 29317993
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
