--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -25,6 +25,15 @@ deploy-pool-testnet:
 	--verify \
 	--etherscan-api-key $(ETHERSCAN_API_KEY) \
 	--broadcast -vv
+
+deploy-commfee-testnet: 
+	-forge script script/DeployCVArbSepoliaCommFee.s.sol:DeployCVArbSepoliaCommFee \
+	--rpc-url $(RPC_URL_ARB_TESTNET) \
+	--account pk1 \
+	--verify \
+	--etherscan-api-key $(ETHERSCAN_API_KEY) \
+	--broadcast -vv
+	
 deploy-testnet: 
 	-forge script script/DeployCVArbSepolia.s.sol:DeployCVArbSepolia \
 	--rpc-url $(RPC_URL_ARB_TESTNET) \
