:makefile: new cmd

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -53,6 +53,8 @@ fork:
 	anvil --chain-id 1337
 fork0:
 	anvil --host=0.0.0.0 --chain-id 1337
+fork0b5:
+	anvil --host=0.0.0.0 --chain-id 1337 -b 5
 fork-testnet:
 	anvil --host=0.0.0.0 -f $(RPC_URL_ARB_TESTNET)
 test1:
