:zap: graph update version :sparkles: WIP implement deploy script multichain :sparkles: adding OP Sepolia network

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -42,6 +42,12 @@ deploy-testnet:
 	--etherscan-api-key $(ETHERSCAN_API_KEY) \
 	--broadcast -vv
 	
+deploy-testnet2: 
+	-forge script script/DeployCVArbSepolia.s.sol:DeployCVArbSepolia \
+	--rpc-url $(RPC_URL_ARB_TESTNET) \
+	--account pk1 \
+	--ffi \
+	-vvv
 deploy-verify: 
 	-forge script script/DeployCVArbSepolia.s.sol:DeployCVArbSepolia \
 	--rpc-url $(RPC_URL_ARB_TESTNET) \
