--- a/pkg/contracts/.gitignore
+++ b/pkg/contracts/.gitignore
@@ -1,4 +1,11 @@
-# some abi should be ignored
-pkg/contracts/out/**
-# !pkg/contracts/out/CVStrategy.sol/CVStrategy.json
-# pkg/contracts/out
+!out/
+out/*
+!out/*CV*
+!out/*Allo.*
+!out/*Registry*
+out/*Test*
+out/*Deploy*
+
+!out/utils/
+out/utils/*
+!out/utils/Mock*
