--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
-	url = https://github.com/foundry-rs/forge-std@v1.8.1
+	url = https://github.com/foundry-rs/forge-std
 [submodule "lib/allo-v2"]
 	path = lib/allo-v2
-	url = https://github.com/allo-protocol/allo-v2@de7b8cd9c0888db7a69b205be16ae05277b441fb
+	url = https://github.com/allo-protocol/allo-v2
 [submodule "lib/safe-contracts"]
 	path = lib/safe-contracts
-	url = https://github.com/safe-global/safe-contracts@v1.4.1
+	url = https://github.com/safe-global/safe-contracts
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
-	url = https://github.com/OpenZeppelin/openzeppelin-contracts@v4.9.0
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
