new memberStrategy entity

--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -56,10 +56,10 @@ templates:
           handler: handleMemberActivatedStrategy
         - event: MemberDeactivatedStrategy(address,address)
           handler: handleMemberDeactivatedStrategy
-        # - event: MemberPowerDecreased(address,address,uint256)
-          # handler: handleMemberPowerDecreased
-        # - event: MemberPowerIncreased(address,address,uint256)
-          # handler: handleMemberPowerIncreased
+        - event: MemberPowerDecreased(address,uint256)
+          handler: handleMemberPowerDecreased
+        - event: MemberPowerIncreased(address,uint256)
+          handler: handleMemberPowerIncreased
         # - event: BasisStakedAmountSet(uint256)
           # handler: handleBasisStakedAmountSet
         # - event: CouncilSafeSet(address)
