:zap: script to add strategy via council safe :zap: implementing ERC165 :bug: access control increase/decreasePower and increasePowerQuadratic :zap: fix tests :bug; fix possible bug with underflow

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -10,6 +10,15 @@ RPC_URL_LOCALHOST = http://127.0.0.1:8545
 print : 
 	@echo $(RPC_URL)
 	
+add-strategy: #make add-strategy S=0x1234 
+	-forge script script/AddStrategy.s.sol:AddStrategy \
+	--rpc-url $(RPC_URL_ARB_TESTNET) \
+	--account pk1 \
+	--sig "run(address)" $(S) \
+	--broadcast \
+	-vvvv
+
+
 deploy: 
 	-forge script script/DeployCV.s.sol:DeployCV \
 	--rpc-url $(RPC_URL_LOCALHOST) \
