--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -1,10 +1,14 @@
-NEXT_PUBLIC_SUBGRAPH_URL=
+NEXT_PUBLIC_SUBGRAPH_URL_ARB_SEP=
+NEXT_PUBLIC_SUBGRAPH_URL_OP_SEP=
 
 # NEXT_PUBLIC_ENV_GARDENS=
 # NEXT_PUBLIC_ENV_GARDENS=prod
 
+NEXT_PUBLIC_RPC_URL_OP_TESTNET=https://opt-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
 NEXT_PUBLIC_RPC_URL_ARB_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
 
 RPC_URL_LOCAL=http://127.0.0.1:8545
 
 PINATA_JWT=
+
+
