:sparkles: createPool with strategy template :zap: add owner accept safe args

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -18,11 +18,11 @@ add-strategy: #make add-strategy S=0x1234
 	--broadcast \
 	-vvvv
 
-add-owner: #make add-owner owner=0x1234 
+add-owner: #make add-owner owner=0x1234 safe=0x1234
 	-forge script script/AddOwner.s.sol:AddOwner \
 	--rpc-url $(RPC_URL_ARB_TESTNET) \
 	--account pk1 \
-	--sig "run(address)" $(owner) \
+	--sig "run(address,address)" $(owner) $(safe) \
 	--broadcast \
 	-vvvv
 
