--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,7 @@
       ],
       "env": [
         "NEXT_PUBLIC_SUBGRAPH_URL",
+        "NEXT_PUBLIC_SUBGRAPH_URL_ETH_SEP",
         "PINATA_JWT"
       ]
     },
