--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -7,6 +7,7 @@ NEXT_PUBLIC_SUBGRAPH_URL_OP_SEP=
 
 NEXT_PUBLIC_RPC_URL_OP_TESTNET=https://opt-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
 NEXT_PUBLIC_RPC_URL_ARB_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
+NEXT_PUBLIC_RPC_URL_ETH_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
 
 RPC_URL_LOCAL=http://127.0.0.1:8545
 
