:zap: redeploy, verify, and remove mock :zap: council safe in the multichain

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -71,18 +71,26 @@ deploy-testnet-multi-sep:
 	-forge script script/DeployCVMultiChain.s.sol:DeployCVMultiChain \
 	--rpc-url $(RPC_URL_SEP_TESTNET) \
 	--account pk1 \
-	--sig "run(string,address)" 'sepolia' \
+	--sig "run(string)" 'sepolia' \
 	--ffi \
-	--etherscan-api-key $(ETHERSCAN_API_KEY) \
+	--etherscan-api-key $(ETHERSCAN_API_KEY_ETH_SEP) \
 	--broadcast \
 	--legacy \
 	-vvv
 
+deploy-verify-multi-sep: 
+	-forge script script/DeployCVMultiChain.s.sol:DeployCVMultiChain \
+	--rpc-url $(RPC_URL_SEP_TESTNET) \
+	--account pk1 \
+	--verify \
+	--etherscan-api-key $(ETHERSCAN_API_KEY_ETH_SEP) \
+	-vv
+	
 deploy-testnet-multi-op: 
 	-forge script script/DeployCVMultiChain.s.sol:DeployCVMultiChain \
 	--rpc-url $(RPC_URL_OP_TESTNET) \
 	--account pk1 \
-	--sig "run(string,address)" 'opsepolia' \
+	--sig "run(string)" 'opsepolia' \
 	--ffi \
 	--etherscan-api-key $(ETHERSCAN_API_KEY) \
 	--broadcast \
@@ -92,7 +100,7 @@ deploy-testnet-multi-arb:
 	-forge script script/DeployCVMultiChain.s.sol:DeployCVMultiChain \
 	--rpc-url $(RPC_URL_ARB_TESTNET) \
 	--account pk1 \
-	--sig "run(string,address)" 'arbsepolia' \
+	--sig "run(string)" 'arbsepolia' \
 	--ffi \
 	--etherscan-api-key $(ETHERSCAN_API_KEY) \
 	--broadcast \
