--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,9 +17,10 @@
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^5.17.19",
+    "@thirdweb-dev/chain-icons": "^1.0.5",
     "@urql/next": "^1.1.0",
     "@wagmi/core": "~1",
-    "addreth": "^2.0.0",
+    "addreth": "1.2.0",
     "classnames": "^2.5.1",
     "dnum": "^2.11.0",
     "echarts": "^5.4.2",
